(lang dune 3.7)
(name opam-distro)

(generate_opam_files true)
(source (github ocurrent/obuilder))

(authors "blah")
(maintainers "blah")
(license "Apache-2.0")
(documentation "blah")

(package
 (name opam-distro)
 (synopsis "")
 (description "")
 (depends
  astring
  fmt
  ocaml-version
  sexplib))
